static/app.css
/* ... */
.icon a {
    width: 211px;
}

.icon img {
    width: 128px;
    object-fit: cover;
    margin-top: 28px;
}

#name, #download-hint {
    position: absolute;
    display: flex;
    width: 211px;
    height: 48px;
    justify-content: center;
    align-items: center;
    padding: 0 24px 0 24px;
    transition: transform 336ms, opacity 240ms;
    transition-delay: 20ms;
}

#name {
    color: rgba(255, 255, 255, 0.336);
    font-size: 11pt;
    opacity: 1;
    transform: scale(1);
}

#download-hint {
    color: rgba(255, 255, 255, 0.9);
    font-size: 14pt;
    font-weight: bolder;
    opacity: 0;
    transform: scale(0.6);
    transition: transform 120ms, opacity 180ms;
}

.icon:hover #name {
    opacity: 0;
    transition: transform 120ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
}

.icon:hover #download-hint {
    transform: scale(1);
    opacity: 1;
    transition: transform 120ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
}

.icon:hover {
    transform: scale(0.95);
    background: rgba(255, 255, 255, 0.03);
    transition: transform 180ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
}

.icon:hover img {
    opacity: 0.6;
    transition: transform 180ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
}

#wppagefooter, #wppagenotice {
	margin-left: 24px;
	margin-right: 24px;
}

@media only screen and (max-width: 1024px) {
	.wallprev-container {
		width: 75vw;
	}
	.icons-container {
        width: 723px;
        margin: 72px auto 0 auto;
    }
    .icon-grid {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media only screen and (max-width: 826px) {
	.icons-container {
        width: 494px;
        margin: 72px auto 0 auto;
    }
    .icon-grid {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media only screen and (max-width: 499px) {
	.wallprev-container {
		width: 100%;
		margin-left: 0;
		margin-right: 0;
	}

	.wallprev {
		grid-template-columns: repeat(3, 1fr);
	}

	.wallprev img:hover {
		transform: none;
	}
	
	.wallprev img:active {
		opacity: 50%;
	}

	.logo-container img:hover {
		transform: none;
	}

	.logo-container img:active {
		opacity: 25%;
		transform: scale(0.75);
	}

	.related-wrapper img:hover {
		transform: none;
	}
	
	.related-wrapper img:active {
		transform: none;
	}	

	.download-button:active {
		transform: none;
		opacity: 50%;
	}

	.get-button-container {
		display: none;
		width: 100%;
		align-self: flex-end;
		padding-bottom: 3px;
		text-align: right;
	}

	.get-button {
		display: inline-block;
		height: 32px;
		background-color: rgba(0, 0, 0, 0.7);
		color: rgba(255, 255, 255, 0.9);
		border: none;
		padding-top: 6px;
		padding-bottom: 6px;
		padding-left: 13px;
		padding-right: 13px;
		text-align: center;
		text-decoration: none;
		border-radius: 20px;
		backdrop-filter: blur(1em);
		-webkit-backdrop-filter: blur(1em);
	}

	.credits-section {
		justify-content: space-between;
	}

	.screenshots-wrapper::-webkit-scrollbar {
		display: none;
	}

	.screenshots-wrapper {
		overflow-x: scroll;
		overflow-y: hidden;
	}

	.related-wrapper::-webkit-scrollbar {
		display: none;
	}

	.related-wrapper {
		overflow-x: scroll;
		overflow-y: hidden;
	}

	.footer, .copyright-notice {
		margin-left: 0.5em;
		margin-right: 0.5em;
	}

	.download-grid {
		grid-template-columns: 45% 45%;
		grid-template-rows: 60% 60%;
		grid-column-gap: 10%;
		padding-bottom: 32px;
	}

	#wppagefooter, #wppagenotice {
		margin-left: 24px;
		margin-right: 24px;
	}

	#interaction-prevention {
        display: block;
        position: absolute;
        width: 100%;
        height: 100%;
        margin-left: -12px;
		margin-right: 0;
        padding: 0;
        z-index: 2;
    }

    .mobile-notice {
        display: flex;
        height: 72px;
        margin: 0 0 24px 0;
        border-radius: 8px;
        align-items: center;
        background: rgba(255, 255, 255, 0.06);
    }

    .mobile-notice p {
        width: 228px;
        margin-top: 2px;
        font-size: 11pt;
        color: rgba(255, 255, 255, 0.336);

    }

    #info {
        display: block;
        width: 20px;
        margin: 0 16px 0 40px;
        opacity: 0.28;
    }

    .icons-container {
		width: 100%;
		margin-top: 72px;
		margin-left: 0;
		margin-right: 0;
        padding: 0 12px 0 12px;
	}

    .icons-container h1 { 
        margin-left: 4px;
    }

    .icon-grid {
        grid-column-gap: 12px;
        grid-row-gap: 12px;
    }
    
    .icon {
        height: 196px;
        background: rgba(255, 255, 255, 0.06);
        transition: none;
    }

    .icon a {
        width: 128px;
    }

    .icon img {
        width: 96px;
        margin-top: 28px;
    }

    #name, #download-hint {
        width: 128px;
        height: 48px;
        justify-content: center;
        align-items: center;
        padding: 0 12px 0 12px;
        transition: none;
        transition-delay: none;
    }
    
    #name {
        font-size: 11pt;
    }
    
    #download-hint {
        display: none;
        transition: none;
    }

    .icon:hover #name {
        opacity: 1;
        transition: none;
    }
    
    .icon:hover #download-hint {
        transform: none;
        opacity: 0;
        transition: none;
    }
    
    .icon:hover {
        transform: none;
        background: rgba(255, 255, 255, 0.06);
        transition: none;
    }
    
    .icon:hover img {
        opacity: 1;
        transition: none;
    }
}
/* ... */

